Fri Jul 18 23:23:37 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (EVENTSINK_Invoke): avoid cfp consistency
	  error when exception raised in event callback.

Fri Jul 18 14:52:14 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (socklist): table for registering socket options
	  (currently only O_NONBLOCK).

	* win32/win32.c (StartSockets, exit_handler): alloc/free socklist.

	* win32/win32.c (is_socket): use socklist.

	* win32/win32.c (rb_w32_accept, rb_w32_socket, rb_w32_socketpair):
	  register new socket to socklist.

	* win32/win32.c (rb_w32_close): remove closing socket from socklist.

	* win32/win32.c (fcntl): register socket options.

	* win32/win32.c (overlapped_socket_io): send to/recv from socket with
	  overlapped operation if the socket is not nonblocking mode.
	  [experimental]

	* win32/win32.c (rb_w32_send, rb_w32_sendto, rb_w32_recv,
	  rb_w32_recvfrom): use overlapped_socket_io().

	* win32/win32.c (open_ifs_socket): set overlapped mode. this is the
	  default mode of winsock's socket(), so lacking it is an old bug.

Fri Jul 18 09:44:30 2008

	* lib/rdoc/*: Import RDoc r101.

Thu Jul 17 23:45:55 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/rdoc/test_rdoc_c_parser.rb (teardown): close tempfile.

Thu Jul 17 21:08:49 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* test/ruby/test_process.rb (test_getpriority, test_setpriority): use
	  PRIO_PROCESS instead of PRIO_USER.

Thu Jul 17 20:41:42 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* pack.c (pack_unpack): fix v and V with big endian.
	  [1].pack("V").unpack("V") was [4294967296].

Thu Jul 17 20:35:03 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* pack.c (pack_pack): fix i! with big endian.  [1].pack("i!") was
	  "\0\0\0\0".

Thu Jul 17 16:48:40 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/socket.c (ruby_connect): select() for connect() has
	  mean only when the socket is non-blocking.

Thu Jul 17 10:55:24 2008  Eric Hodel  <drbrain@segment7.net>
